@startuml

title UC10-B - Seriar Candidaturas de Anúncios (automaticamente)

left to right direction

class Colaborador {
    -String nome 
    -Email email
    -String funcao
    -String telefone
}

class RepositorioAnuncio{
    
}

class RepositorioCandidatura {

}

class RepositorioClassificacao{
    --
    -saveClassificacaoAutomatica(idAnuncio)
}

class RepositorioSeriacao{
    --
    -saveSeriacao(idAnuncio, dataSeriacao, listaCandidaturasSeriadas(idAnuncio))    
}

class UC10_UI{
    --
    -getAllAnunciosASeriar(emailColaborador, idRegimentoAutomatico)
    -listaAnunciosASeriar(emailColaborador, idRegimentoAutomatico)
    -getAllCandidaturas(idAnuncio)
    -listaCandidaturas(idAnuncio)
    -saveClassificacaoAutomatica(idAnuncio)
    -listaCandidaturasSeriadas(idAnuncio)
    -saveSeriacao(idAnuncio, dataSeriacao, listaCandidaturasSeriadas(idAnuncio))  
}

class UC10_CTRL{
    --
    -getAllAnunciosASeriar(emailColaborador, idRegimentoManual)
    -listaAnunciosASeriar(emailColaborador, idRegimentoManual)
    -getAllCandidaturas(idAnuncio)
    -listaCandidaturas(idAnuncio)
    -saveClassificacaoAutomatica(idAnuncio)
    -listaCandidaturasSeriadas(idAnuncio)
    -saveSeriacao(idAnuncio, dataSeriacao, listaCandidaturasSeriadas(idAnuncio))    
}


Colaborador ..> UC10_UI
UC10_UI ..> UC10_CTRL
UC10_CTRL ..> RepositorioAnuncio
UC10_CTRL ..> RepositorioCandidatura
UC10_CTRL ..> RepositorioClassificacao
UC10_CTRL ..> RepositorioSeriacao

@enduml